fixed overflow on nave bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sansita+Swashed:wght@300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+html, body {width:100%; overflow-x:hidden;}
+
 body {
-    height: 100%;
+    
     padding: 0;
     margin: 0;
 }
@@ -15,9 +17,7 @@ body {
 
 /*--------------------------------------navbar from bootstrap----*/
 
-.navbar-container {
-    width: 100%;
-}
+
 
 .sticky-top {
   position: fixed;
